# sra_search

./: .gitignore  README.md  Snakefile  config.yml  environment.yml  flake.nix  shell.nix  submit_rust
.github/workflows/: rust.yml  snakemake.yml
config/: config.yml
env/: aws.yml  sourmash.yml
inputs/: TOBG_NP-110.sig  metagenomes_example.csv  test_sigs
scripts/: catalog_size.py  metagenome_catalog.py  summary.py
searcher/: Cargo.toml
searcher/src/: main.rs
searcher/tests/: searcher_cmd.rs
workflow/: Snakefile
workflow/envs/: download.yml  rust.yml
workflow/scripts/: download_sigs.py
