[package]
name = "searcher"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
#sourmash = "0.11.0"
sourmash = { git = "https://github.com/sourmash-bio/sourmash", branch = "lirber/nodegraph_containment" }
clap = { version = "3.1.0", features = ["derive"] }
serde_json = "1.0.79"
niffler = "2.4.0"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.55"
